2004-12-30 svu
	
	* libxklavier/xklavier_config_xkb.c: some memory leak nailed
	* libxklavier/xklavier.c,
	libxklavier/xklavier_evt.c,
	libxklavier/xklavier_private.h,
	libxklavier/xklavier_xmm.c: internal polish, 
	secondary layouts are managed through the root window property.
	* configure.in, NEWS: preparing 1.14

2004-12-27 svu
	
	* libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_private_xkb.h: A bit of restructuring
	in all XkbComponentNames-related functions. 
	Introducing some ... ugh, 'protected' functions.

2004-12-09 21:30  svu
	
	* libxklavier/xklavier_xkb.c, 
	libxklavier/xklavier_xmm.c: intoducing XKL_*_DISABLE
	envvars - for testing and related stuff. 
	It is just handy to have them.

2004-12-08 23:30  svu
	
	* libxklavier/xklavier_util.c, 
	libxklavier/xklavier_config_xkb.c: Fixing memory leaks.

2004-12-08 18:30  svu
	
	* configure.in, NEWS: Preparing 1.13

2004-12-07 01:30  svu
	
	* libxklavier, tests: introducing XklGetMaxNumGroups. 
	Another new call in API.

2004-12-07 00:20  svu
	
	* configure.in: using ac_x_includes to make configure
	work better. Improved backend checking and diagnostics.
	* autogen.sh: updating the version of tools

2004-12-02 21:47  svu
	
	* configure.in: xmodmap support is built by default

2004-12-02 21:20  svu
	
	* libxklavier/xklavier_xkb.c: Fix for compiling without
	headers

2004-12-02 00:21  svu
	
	* libxklavier/xklavier_xkb.c: Build patch by Andrei 
	Yurkevich

2004-11-28 16:00  svu
	
	* NEWS: Preparing 1.12

2004-11-27 16:00  svu
	
	* libxklavier: Some fixes in xmodmap. First version,
	working somehow

2004-11-25 23:00  svu
	
	* libxklavier, tests: MASSIVE commit. First version
	with somewhat working xmodmap support. Broken API

2004-11-04 19:00  svu

	* libxklavier/Makefile.am,
	libxklavier/xklavier.c,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_config_xmm.c,
	libxklavier/xklavier_evt_xmm.c,
	libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_private_xmm.h,