@@ -89,10 +89,12 @@ int _XklXkbEventHandler( XEvent *xev )
     case XkbIndicatorMapNotify:
     case XkbControlsNotify:
     case XkbNamesNotify:
+#if 0
       /* not really fair - but still better than flooding... */
       XklDebug( 200, "warning: configuration event %s is not actually processed\n",
                 _XklXkbGetXkbEventName( kev->any.xkb_type ) );
       break;
+#endif
     case XkbNewKeyboardNotify:
       XklDebug( 150, "%s\n",
                 _XklXkbGetXkbEventName( kev->any.xkb_type ) );
